Modify code to pass SonarQube checks
JU-271